--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -10,6 +10,14 @@ body {
   padding: 0;
 }
 
+.mbtablestyle {
+        border-collapse: collapse;
+
+   > table, td, th {
+        border: 1px solid black;
+        }
+}
+
 html {
   font-family: $serif-primary;
   font-size: 14px;
