--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -61,6 +61,26 @@ img {
   max-width: 100%;
 }
 
-td {
+table {
+  border: 1px solid $grey-2;
+  border-collapse: collapse;
+  font-size: 85%;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid $grey-2;
+  padding: .25rem .5rem;
   vertical-align: top;
+}
+
+th {
+  text-align: left;
+}
+
+tbody tr:nth-child(odd) td,
+tbody tr:nth-child(odd) th {
+  background-color: $grey-3;
 }
